# pony-stubs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: cd.yaml  code-quality.yml  lint-and-typecheck.yml
pony-stubs/: __init__.pyi  converting.pyi  options.pyi  py23compat.pyi
pony-stubs/flask/: __init__.pyi
pony-stubs/orm/: asttranslation.pyi  core.pyi  dbapiprovider.pyi  dbschema.pyi  decompiling.pyi  ormtypes.pyi  serialization.pyi  sqlbuilding.pyi  sqlsymbols.pyi  sqltranslation.pyi
pony-stubs/orm/dbproviders/: cockroach.pyi  mysql.pyi  oracle.pyi  postgres.pyi  sqlite.pyi
pony-stubs/orm/integration/: bottle_plugin.pyi
pony-stubs/utils/: properties.pyi  utils.pyi
